Updated by task 'AutomatedMDTask_1685045624257_TM-MT_1685045762612'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/ef606f9c6b779bc3fd9262f0a466264a5a2a20da

--- a/help/release-notes/2023/may-2023.md
+++ b/help/release-notes/2023/may-2023.md
@@ -1,9 +1,9 @@
 ---
 title: Notas de versão da Adobe Experience Platform de maio de 2023
 description: As notas de versão de maio de 2023 para Adobe Experience Platform.
-source-git-commit: fea5fdf4b4982b59fb1c4954b8f81e131af9955b
+source-git-commit: e705d6c38bc1a81ee5d2c31a3097e1dba8f5cf7f
 workflow-type: tm+mt
-source-wordcount: '1225'
+source-wordcount: '1361'
 ht-degree: 3%
 
 ---
@@ -32,6 +32,7 @@ Atualizações dos recursos existentes na Adobe Experience Platform:
 - [Governança de dados](#data-governance)
 - [Assimilação de dados](#data-ingestion)
 - [Destinos](#destinations)
+- [Identity Service](#identity-service)
 - [Serviço de query](#query-service)
 - [Fontes](#sources)
 
@@ -107,6 +108,18 @@ Para saber mais sobre a assimilação de dados, leia o [visão geral da assimila
 
 Para obter informações mais gerais sobre destinos, consulte o [visão geral dos destinos](../../destinations/home.md).
 
+## Identity Service {#identity-service}
+
+O serviço de identidade da Adobe Experience Platform fornece uma visão abrangente dos clientes e do comportamento deles ao unir as identidades de vários dispositivos e sistemas, permitindo que você forneça experiências digitais pessoais e de impacto em tempo real.
+
+**Atualizar recursos**
+
+| Recurso | Descrição |
+| --- | --- |
+| Suporte para IDs de parceiros nos aplicativos da Adobe Experience Cloud | As IDs de parceiro agora estão disponíveis no Serviço de identidade. IDs de parceiros são identificadores usados por parceiros de dados para representar pessoas. No Real-time Customer Data Platform, as IDs de parceiros são usadas principalmente para ativar mais o público-alvo e enriquecer dados. As IDs de parceiros não são armazenadas no gráfico de identidade. Para obter mais informações, leia a documentação em [tipos de identidade](../../identity-service/namespaces.md#identity-types). |
+
+Para saber mais sobre o Serviço de identidade, leia a [Visão geral do serviço de identidade](../../identity-service/home.md)
+
 ## Serviço de query {#query-service}
 
 O Serviço de consulta permite usar o SQL padrão para consultar dados no Adobe Experience Platform [!DNL data lake]. Você pode unir qualquer conjunto de dados do data lake e capturar os resultados da consulta como um novo conjunto de dados para usar em relatórios, no Data Science Workspace ou para assimilação no Perfil do cliente em tempo real.
@@ -131,6 +144,7 @@ O Experience Platform fornece uma API RESTful e uma interface interativa que per
 
 | Recurso | Descrição |
 | --- | --- |
+| Suporte de API para transmissão de dados de um [!DNL Snowflake] banco de dados | Agora é possível transmitir dados de um [[!DNL Snowflake] origem](../../sources/connectors/databases/snowflake-streaming.md) usando o [!DNL Flow Service] API. |
 | Suporte à API ampliada para modo de rascunho | Agora você pode pausar e salvar seu progresso durante o workflow de origens ao usar o [!DNL Flow Service] a qualquer momento. Use o `mode=draft` estado para salvar suas conexões base, de origem e de destino como rascunhos. Todas as entidades de rascunho podem ser revisitadas para conclusão posteriormente. Leia o guia em [configuração do [!DNL Flow Service] entidades para um estado de rascunho](../../sources/tutorials/api/draft.md) para obter mais informações. |
 | Disponibilidade geral do [!DNL Salesforce Marketing Cloud] origem | A variável [[!DNL Salesforce Marketing Cloud source] agora está em disponibilidade geral](../../sources/connectors/marketing-automation/salesforce-marketing-cloud.md). Use esta fonte para trazer seus [!DNL Salesforce Marketing Cloud] dados para Experience Platform. |
 | [!DNL Google Ads] atualizações de autenticação | Agora você pode fornecer uma ID de cliente de logon ao autenticar seu [!DNL Google Ads] conta de origem para buscar dados de relatório de um cliente operacional específico. Leia o [[!DNL Google Ads] documentação de origem](../../sources/connectors/advertising/ads.md) para obter mais informações. |
@@ -141,5 +155,3 @@ O Experience Platform fornece uma API RESTful e uma interface interativa que per
 {style="table-layout:auto"}
 
 Para saber mais sobre fontes, leia o [visão geral das origens](../../sources/home.md).
-
-<!-- | API support for streaming data from a [!DNL Snowflake] database | You can now stream data from a [[!DNL Snowflake] source](../../sources/connectors/databases/snowflake.md) using the [!DNL Flow Service] API. | -->
