Updated by task 'AutomatedMDTask_1685130395120_TM-MT_1685130532925'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/e9e9d63608d234072e7573ffbc8ffbd84b442db5

--- a/help/release-notes/2023/may-2023.md
+++ b/help/release-notes/2023/may-2023.md
@@ -1,9 +1,9 @@
 ---
 title: Notas de versão da Adobe Experience Platform de maio de 2023
 description: As notas de versão de maio de 2023 para Adobe Experience Platform.
-source-git-commit: e705d6c38bc1a81ee5d2c31a3097e1dba8f5cf7f
+source-git-commit: fc886dc0d7abb1df76c12edc423bc788b443a788
 workflow-type: tm+mt
-source-wordcount: '1361'
+source-wordcount: '1362'
 ht-degree: 3%
 
 ---
@@ -116,7 +116,7 @@ O serviço de identidade da Adobe Experience Platform fornece uma visão abrange
 
 | Recurso | Descrição |
 | --- | --- |
-| Suporte para IDs de parceiros nos aplicativos da Adobe Experience Cloud | As IDs de parceiro agora estão disponíveis no Serviço de identidade. IDs de parceiros são identificadores usados por parceiros de dados para representar pessoas. No Real-time Customer Data Platform, as IDs de parceiros são usadas principalmente para ativar mais o público-alvo e enriquecer dados. As IDs de parceiros não são armazenadas no gráfico de identidade. Para obter mais informações, leia a documentação em [tipos de identidade](../../identity-service/namespaces.md#identity-types). |
+| Suporte para IDs de parceiros nos aplicativos da Adobe Experience Cloud [!BADGE Beta]{type=Informative} | As IDs de parceiro agora estão disponíveis no Serviço de identidade. IDs de parceiros são identificadores usados por parceiros de dados para representar pessoas. No Real-time Customer Data Platform, as IDs de parceiros são usadas principalmente para ativar mais o público-alvo e enriquecer dados. As IDs de parceiros não são armazenadas no gráfico de identidade. Para obter mais informações, leia a documentação em [tipos de identidade](../../identity-service/namespaces.md#identity-types). |
 
 Para saber mais sobre o Serviço de identidade, leia a [Visão geral do serviço de identidade](../../identity-service/home.md)
 
