Updated by task 'AutomatedMDTask_1685467528449_TM-MT_1685467708952'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/d98982aa03591925eed68e6393f75dbbf7489256

--- a/help/release-notes/2023/may-2023.md
+++ b/help/release-notes/2023/may-2023.md
@@ -1,10 +1,10 @@
 ---
 title: Notas de versão da Adobe Experience Platform de maio de 2023
 description: As notas de versão de maio de 2023 para Adobe Experience Platform.
-source-git-commit: fc886dc0d7abb1df76c12edc423bc788b443a788
+source-git-commit: 43f505c6d3871e6ebc7d644aef6ec3b71f9fc2bc
 workflow-type: tm+mt
-source-wordcount: '1362'
-ht-degree: 3%
+source-wordcount: '1560'
+ht-degree: 4%
 
 ---
 
@@ -32,6 +32,7 @@ Atualizações dos recursos existentes na Adobe Experience Platform:
 - [Governança de dados](#data-governance)
 - [Assimilação de dados](#data-ingestion)
 - [Destinos](#destinations)
+- [Experience Data Model (XDM)](#xdm)
 - [Identity Service](#identity-service)
 - [Serviço de query](#query-service)
 - [Fontes](#sources)
@@ -107,6 +108,24 @@ Para saber mais sobre a assimilação de dados, leia o [visão geral da assimila
 - Corrigimos uma limitação no destino de armazenamento na nuvem SFTP (Beta), em que os usuários não conseguiam personalizar o valor do parâmetro Port. O valor agora pode ser editado ao configurar uma conexão de destino SFTP (Beta) por meio do [API](/help/destinations/api/activate-segments-file-based-destinations.md) ou [IU](/help/destinations/catalog/cloud-storage/sftp.md#authentication-information).
 
 Para obter informações mais gerais sobre destinos, consulte o [visão geral dos destinos](../../destinations/home.md).
+
+## Experience Data Model (XDM) {#xdm}
+
+O XDM é uma especificação de código aberto que fornece estruturas e definições comuns (esquemas) para dados trazidos para o Adobe Experience Platform. Seguindo os padrões XDM, todos os dados de experiência do cliente podem ser incorporados a uma representação comum para fornecer insights de maneira mais rápida e integrada. Você pode obter insights valiosos das ações do cliente, definir públicos do cliente por meio de segmentos e usar atributos do cliente para fins de personalização.
+
+**Componentes XDM atualizados**
+
+| Tipo de componente | Nome | Descrição |
+| --- | --- | --- |
+| Grupo de campos | (Múltiplos) | Vários campos para [Item de oferta](https://github.com/adobe/xdm/pull/1720/files) foram atualizadas para remover uma hierarquia dupla do esquema. |
+| Grupo de campos | [[!UICONTROL Perfil de cliente potencial individual XDM]](https://github.com/adobe/xdm/pull/1721/files) | A variável `partnerProspect` A opção para tags de metadados foi adicionada à variável [!UICONTROL Perfil de cliente potencial individual XDM] classe. |
+| Tipo de dados | (Múltiplos) | Vários campos foram adicionados para o [!UICONTROL Informações de detalhes de mídia] tipo de dados. |
+| Tipo de dados | [[!UICONTROL Informações de detalhes da sessão]](https://github.com/adobe/xdm/pull/1716/files) | Um novo campo foi adicionado para indicar se um redirecionamento ocorreu. |
+| Grupo de campos | [[!UICONTROL Detalhes de interação do MediaAnalytics]](https://github.com/adobe/xdm/pull/1716/files) | Um novo campo relacionado aos relatórios de mídia foi adicionado. |
+
+{style="table-layout:auto"}
+
+Para obter mais informações sobre o XDM na Platform, leia o [Visão geral do sistema XDM](../../xdm/home.md).
 
 ## Identity Service {#identity-service}
 
