--- a/help/release-notes/2023/may-2023.md
+++ b/help/release-notes/2023/may-2023.md
@@ -1,9 +1,9 @@
 ---
 title: Notas de versão da Adobe Experience Platform de maio de 2023
 description: As notas de versão de maio de 2023 para Adobe Experience Platform.
-source-git-commit: 09d8014eea2d31649eed3814ad07172027b2c435
+source-git-commit: 133d6af3b209f848a2f257d4a3903ee1b8ec2f76
 workflow-type: tm+mt
-source-wordcount: '1777'
+source-wordcount: '1994'
 ht-degree: 5%
 
 ---
@@ -28,6 +28,7 @@ ht-degree: 5%
 
 Atualizações dos recursos existentes na Adobe Experience Platform:
 
+- [Painéis](#dashboards)
 - [Coleção de dados](#data-collection)
 - [Governança de dados](#data-governance)
 - [Assimilação de dados](#data-ingestion)
@@ -36,6 +37,16 @@ Atualizações dos recursos existentes na Adobe Experience Platform:
 - [Identity Service](#identity-service)
 - [Serviço de query](#query-service)
 - [Fontes](#sources)
+
+## Painéis {#dashboards}
+
+O Adobe Experience Platform fornece vários painéis por meio dos quais você pode visualizar insights importantes sobre os dados de sua organização, conforme capturados durante instantâneos diários.
+
+| Recurso | Descrição |
+| --- | --- |
+| Correção de direitos de licença | A variável [!UICONTROL Uso da licença] o painel de dados e os dados de licença individuais dos clientes foram atualizados para resolver discrepâncias anteriores entre os direitos de licença registrados nas Ordens de venda e aqueles originalmente relatados na Experience Platform [!UICONTROL Uso da licença] painel. As atualizações de dados de licenças individuais ocorrerão em fases, entre junho de 2023 e 11 de junho de 2023. Os valores de uso reais permanecem precisos.<br><br>O Experience Platform fornece vários recursos para gerenciar o volume de uso:<br><ul><li>[Revisar e aplicar as práticas recomendadas para gerenciar o uso de dados e licenças](https://experienceleague.adobe.com/docs/experience-platform/landing/license/data-management-best-practices.html)</li><li>Aplicar regras e condições de filtragem a [incluir ou excluir seletivamente dados da assimilação para o Perfil do cliente em tempo real](https://experienceleague.adobe.com/docs/experience-platform/sources/ui-tutorials/create/adobe-applications/analytics.html#filtering-for-profile) para dados do Analytics antes de serem assimilados no Perfil.</li><li>[Entre em contato com o suporte de Adobe para aplicar tempos de expiração para Perfis pseudônimos.](https://experienceleague.adobe.com/docs/experience-platform/profile/pseudonymous-profiles.html)</li><li>[Entre em contato com o suporte ao Adobe para ativar as expirações do evento de experiência nos conjuntos de dados desejados.](https://experienceleague.adobe.com/docs/experience-platform/profile/event-expirations.html)</li><li>Entre em contato com seu representante da Adobe para discutir as opções para aumentar seus direitos de licença.</li></ul> |
+
+Para obter mais informações sobre painéis, incluindo como conceder permissões de acesso e criar widgets personalizados, comece lendo o [visão geral dos painéis](../../dashboards/home.md).
 
 ## Coleta de dados {#data-collection}
 
