--- a/help/release-notes/2023/june-2023.md
+++ b/help/release-notes/2023/june-2023.md
@@ -1,11 +1,10 @@
 ---
 title: Notas de versão da Adobe Experience Platform
 description: As notas de versão de junho de 2023 para o Adobe Experience Platform.
-exl-id: f854f9e5-71be-4d56-a598-cfeb036716cb
 source-git-commit: 72a1ab9203d7cafac5d445f5ca3d2e65bcd1a45c
 workflow-type: tm+mt
-source-wordcount: '770'
-ht-degree: 5%
+source-wordcount: '834'
+ht-degree: 6%
 
 ---
 
@@ -27,14 +26,15 @@ A Adobe Experience Platform fornece um conjunto de tecnologias que permitem cole
 
 | Tipo | Recurso | Descrição |
 | --- | --- | --- |
-| Extensão | [!DNL Google Cloud Platform] extensão de encaminhamento de eventos | A variável [[!DNL Google Cloud Platform]](../../tags/extensions/server/google-cloud-platform/overview.md) a extensão de encaminhamento de eventos permite encaminhar dados do evento para a Google para ativação via [!DNL Google Pub/Sub]. |
+| Extensão | [!DNL Google Cloud Platform] extensão de encaminhamento de eventos | A variável [[!DNL Google Cloud Platform]](../../tags/extensions/server/google-cloud-platform/overview.md) a extensão de encaminhamento de eventos permite encaminhar dados do evento para a Google para ativação por meio do pub/sub do Google. |
 | Extensão | [!DNL Cloud connector for Google Analytics 4 (ga4)] extensão | A variável [[!DNL Cloud connector for Google Analytics 4 (ga4)]](https://partners.adobe.com/exchangeprogram/experiencecloud/exchange.details.109820.html) a extensão de encaminhamento de eventos permite rastrear a análise por meio da nova [!DNL Google Analytics 4 (ga4)] padrão. |
-| Segredo | Segredo JWT do OAuth 2 | A variável [Segredo JWT do OAuth 2](../../tags/ui/event-forwarding/secrets.md) permite usar o Adobe e [!DNL Google] Tokens de serviço para suportar interações servidor-servidor no encaminhamento de eventos. |
-| Tags e encaminhamento de eventos | Atribuição de usuário | A atribuição de usuário fornece dados essenciais de atividade em toda a [Tags](../../tags/home.md) e [Encaminhamento de evento](../../tags/ui/event-forwarding/overview.md) IU.<br><br>Os dados incluem quem fez quais alterações e em que momento. Esses dados estão visíveis na interface do usuário de Tags e Encaminhamento de eventos nas seguintes telas:<br><br>* Visão geral das propriedades<br><br><ul><li> Visão geral das propriedades</li><li> Extensões instaladas</li><li>Comparação e revisão de regras</li><li>Revisão de comparação dos Elementos de dados</li><li>Análise de comparação de extensões</li><li>Alterações no recurso da biblioteca</li><li>Última criação e publicação da biblioteca</li></ul> |
+| Extensão | [!DNL TikTok] extensão da API de conversões | A variável [!DNL TikTok] A extensão de encaminhamento de eventos da API de conversões permite aproveitar os dados capturados na Rede de borda da Adobe Experience Platform e enviá-los para o [!DNL Pinterest] na forma de eventos do lado do servidor usando o [!DNL TikTok] API de conversões. |
+| Segredo | Segredo JWT do OAuth 2 | A variável [Segredo JWT do OAuth 2](https://experienceleague.adobe.com/docs/experience-platform/tags/event-forwarding/secrets.html?lang=en) permite usar o Adobe e [!DNL Google] Tokens de serviço para suportar interações servidor-servidor no encaminhamento de eventos. |
+| Tags e encaminhamento de eventos | Atribuição de usuário | A atribuição de usuário fornece dados essenciais de atividade em toda a [Tags](https://experienceleague.adobe.com/docs/experience-platform/tags/home.html?lang=pt-BR) e [Encaminhamento de evento](https://experienceleague.adobe.com/docs/experience-platform/tags/event-forwarding/overview.html?lang=en) IU.<br><br>Os dados incluem quem fez quais alterações e em que momento. Esses dados estão visíveis na interface do usuário de Tags e Encaminhamento de eventos nas seguintes telas:<br><br>* Visão geral das propriedades<br><br>* Extensões instaladas<br><br>* Comparação e revisão de regras<br><br>* Revisão de comparação dos Elementos de dados<br><br>* Revisão de comparação das extensões<br><br>* Alterações no recurso da biblioteca<br><br>* Última criação e publicação da biblioteca |
 
 {style="table-layout:auto"}
 
-Para saber mais sobre a coleta de dados, leia a [visão geral da coleção de dados](../../tags/home.md).
+Para saber mais sobre coleções de dados, leia o [visão geral das coleções de dados](../../tags/home.md).
 
 ## Serviço de query {#query-service}
 
