Updated by task 'AutomatedMDTask_1689046009102_TM-MT_1689046121774'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/ca03f297bfd169513c35a98a2b92090158141128

--- a/help/tags/release-notes/2018.md
+++ b/help/tags/release-notes/2018.md
@@ -2,10 +2,10 @@
 title: Notas de versão de 2018
 description: Notas de versão de 2018 de tags na Adobe Experience Platform.
 exl-id: fcbfa3f9-51a4-4852-894e-29343df3eabe
-source-git-commit: 8ded2aed32dffa4f0923fedac7baf798e68a9ec9
+source-git-commit: 4f75bbfee6b550552d2c9947bac8540a982297eb
 workflow-type: tm+mt
-source-wordcount: '2635'
-ht-degree: 96%
+source-wordcount: '2639'
+ht-degree: 95%
 
 ---
 
@@ -81,9 +81,9 @@ A criação de uma propriedade de tag móvel permite:
 *  extensão do Mobile Core e todas as extensões adicionais podem ser baixadas e instaladas por meio dos gerentes de dependência, como Maven e CocoaPods.
 * Ao adicionar uma extensão, você deve recompilar o aplicativo e concluir o processo de envio/aprovação da loja de aplicativos.
 
-   Os elementos de dados, as regras e as configurações de extensão são fornecidos dinamicamente para o seu aplicativo, são atualizados na inicialização do aplicativo e não exigem atualizações da loja de aplicativos.
+  Os elementos de dados, as regras e as configurações de extensão são fornecidos dinamicamente para o seu aplicativo, são atualizados na inicialização do aplicativo e não exigem atualizações da loja de aplicativos.
 
-Para obter mais informações sobre a introdução às propriedades móveis, consulte [Publicação de conteúdo para dispositivos móveis](https://aep-sdks.gitbook.io/docs/).
+Para obter mais informações sobre a introdução às propriedades móveis, consulte [Publicação de conteúdo para dispositivos móveis](https://experienceleague.adobe.com/docs/platform-learn/data-collection/mobile-sdk/overview.html).
 
 ## 6 de setembro de 2018
 
@@ -196,7 +196,7 @@ Mensagens de aviso aprimoradas.
 
 * Não solicitar mais alterações não salvas nos componentes da regra quando
 
-   as alterações forem salvas.
+  as alterações forem salvas.
 
 * Correção de interações problemáticas com a Biblioteca ativa.
 
@@ -325,11 +325,11 @@ Agora é possível passar objetos reais para a função de log e exibi-los como 
 
 * Na página
 
-   Agora a biblioteca de tags inclui suporte para execução assíncrona. Há ramificações importantes para como isso muda o que acontece na biblioteca. Você deve ler a [documentação assíncrona](../ui/client-side/asynchronous-deployment.md) antes de qualquer ação.
+  Agora a biblioteca de tags inclui suporte para execução assíncrona. Há ramificações importantes para como isso muda o que acontece na biblioteca. Você deve ler a [documentação assíncrona](../ui/client-side/asynchronous-deployment.md) antes de qualquer ação.
 
 * Alternância assíncrona em ambientes
 
-   Ao recuperar o código de inserção de um ambiente, agora você pode virar uma opção de alternância para obter o código de inserção, se desejar que a biblioteca seja carregada de forma assíncrona.
+  Ao recuperar o código de inserção de um ambiente, agora você pode virar uma opção de alternância para obter o código de inserção, se desejar que a biblioteca seja carregada de forma assíncrona.
 
 #### Aprimoramentos na interface do usuário
 
