--- a/help/release-notes/2022/may-2022.md
+++ b/help/release-notes/2022/may-2022.md
@@ -2,10 +2,10 @@
 title: Notas de versão da Adobe Experience Platform de maio de 2022
 description: As notas de versão de maio de 2022 para Adobe Experience Platform.
 exl-id: bcde04aa-7858-437c-a692-2841124006a5
-source-git-commit: 378f222b5c673632ce5792c52fc32410106def37
+source-git-commit: 4bdbb987905b6010f4b4f75bee060828d0e07368
 workflow-type: tm+mt
 source-wordcount: '2358'
-ht-degree: 5%
+ht-degree: 12%
 
 ---
 
@@ -18,17 +18,17 @@ Novos recursos na Adobe Experience Platform:
 - [Controle de acesso baseado em atributos](#abac)
 - [Higiene de dados](#hygiene)
 
-Atualizações dos recursos existentes na Adobe Experience Platform:
+Atualizações dos recursos já existentes na Adobe Experience Platform:
 
 - [Alertas](#alerts)
 - [Logs de auditoria](#audit-logs)
 - [Painéis](#dashboards)
-- [Coleta de dados](#data-collection)
+- [Coleção de dados](#data-collection)
 - [Governança de dados](#data-governance)
 - [Preparação de dados](#data-prep)
 - [Destinos](#destinations)
 - [Experience Data Model (XDM)](#xdm)
-- [Serviço de query](#query-service)
+- [Query Service](#query-service)
 - [Fontes](#sources)
 
 ## Controle de acesso baseado em atributos {#abac}
@@ -137,11 +137,11 @@ O painel de segmentos fornece uma interface de usuário através da qual você p
 
 {style="table-layout:auto"}
 
-Para obter mais informações sobre segmentos, consulte [documentação do painel de segmentos](../../dashboards/guides/segments.md).
+Para obter mais informações sobre segmentos, consulte [documentação do painel de segmentos](../../dashboards/guides/audiences.md).
 
-## Coleta de dados {#data-collection}
+## Coleção de dados {#data-collection}
 
-O Experience Platform fornece um conjunto de tecnologias que permitem coletar dados de experiência do cliente do lado do cliente e enviá-los para a Rede de borda da Adobe Experience Platform, onde eles podem ser enriquecidos, transformados e distribuídos para destinos Adobe ou não Adobe.
+A Experience Platform fornece um conjunto de tecnologias que permitem coletar dados da experiência do cliente e enviá-los à Rede de borda da Adobe Experience Platform, onde eles podem ser enriquecidos, transformados e distribuídos para destinos da Adobe ou de outras empresas.
 
 **Novos recursos**
 
@@ -187,7 +187,7 @@ Para obter mais informações sobre [!DNL Data Prep], consulte o [[!DNL Data Pre
 
 ## [!DNL Destinations] {#destinations}
 
-[!DNL Destinations] são integrações pré-criadas com plataformas de destino que permitem a ativação contínua de dados do Adobe Experience Platform. Você pode usar destinos para ativar seus dados conhecidos e desconhecidos para campanhas de marketing entre canais, campanhas por email, publicidade direcionada e muitos outros casos de uso.
+[!DNL Destinations] são integrações pré-construídas com plataformas de destino que permitem a ativação perfeita de dados da Adobe Experience Platform. É possível usar destinos para ativar seus dados conhecidos e desconhecidos para campanhas de marketing entre canais, campanhas de email, publicidade direcionada e muitos outros casos de uso.
 
 **Recursos novos ou atualizados**
 
@@ -227,7 +227,7 @@ O XDM é uma especificação de código aberto que fornece estruturas e definiç
 
 Para obter mais informações sobre o XDM na Platform, consulte a [Visão geral do sistema XDM](../../xdm/home.md).
 
-## Serviço de query {#query-service}
+## Query Service {#query-service}
 
 O Serviço de consulta permite usar o SQL padrão para consultar dados no Adobe Experience Platform [!DNL data lake]. Você pode associar qualquer conjunto de dados da [!DNL data lake] e capture os resultados da consulta como um novo conjunto de dados para usar em relatórios, no Data Science Workspace ou para assimilação no Perfil do cliente em tempo real.
 
@@ -248,7 +248,7 @@ Para obter mais informações sobre os recursos do Serviço de consulta, consult
 
 O Adobe Experience Platform pode assimilar dados de fontes externas e, ao mesmo tempo, estruturar, rotular e aprimorar esses dados usando os serviços da plataforma. Você pode assimilar dados de várias fontes, como aplicativos Adobe, armazenamento baseado em nuvem, software de terceiros e seu sistema de CRM.
 
-O Experience Platform fornece uma API RESTful e uma interface interativa que permite configurar conexões de origem para vários provedores de dados com facilidade. Essas conexões de origem permitem autenticar e conectar a sistemas de armazenamento externos e serviços de CRM, definir tempos para execuções de assimilação e gerenciar a taxa de transferência de assimilação de dados.
+A Experience Platform fornece uma API RESTful e uma interface interativa que permite configurar conexões de origem para vários provedores de dados com facilidade. Essas conexões de origem permitem autenticar e conectar a sistemas de armazenamento externos e serviços de CRM, definir períodos para execuções de assimilação e gerenciar a taxa de transferência de assimilação de dados.
 
 | Recurso | Descrição |
 | --- | --- |
