Updated by task 'AutomatedMDTask_1690196525038_TM-MT_1690196646476'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/2f2792035fe0b7ae41fa9c02d7148434aa5f1649

--- a/help/release-notes/2022/june-2022.md
+++ b/help/release-notes/2022/june-2022.md
@@ -1,11 +1,11 @@
 ---
 title: Notas de versão da Adobe Experience Platform de junho de 2022
-description: As notas de versão de junho de 2022 para o Adobe Experience Platform.
+description: As notas de versão de junho de 2022 da Adobe Experience Platform.
 exl-id: 44f5ca11-f5c0-4e86-98b2-9564e3a5ca3d
-source-git-commit: 7c1d956e3b6a1314baa13fef823d73d42404516a
+source-git-commit: 3d0f2823dcf63f25c3136230af453118c83cdc7e
 workflow-type: tm+mt
 source-wordcount: '1845'
-ht-degree: 4%
+ht-degree: 13%
 
 ---
 
@@ -13,13 +13,13 @@ ht-degree: 4%
 
 **Data de lançamento: 22 de junho de 2022**
 
-Atualizações dos recursos existentes na Adobe Experience Platform:
+Atualizações dos recursos já existentes na Adobe Experience Platform:
 
 - [[!DNL Data Science Workspace]](#dsw)
 - [[!DNL Destinations]](#destinations)
-- [Coleta de dados](#data-collection)
+- [Coleção de dados](#data-collection)
 - [Experience Data Model (XDM)](#xdm)
-- [Serviço de query](#query-service)
+- [Query Service](#query-service)
 - [Fontes](#sources)
 
 ## [!DNL Data Science Workspace] {#dsw}
@@ -39,7 +39,7 @@ Para obter informações mais gerais sobre o Data Science Workspace, consulte o 
 
 ## [!DNL Destinations] {#destinations}
 
-[!DNL Destinations] são integrações pré-criadas com plataformas de destino que permitem a ativação contínua de dados do Adobe Experience Platform. Você pode usar destinos para ativar seus dados conhecidos e desconhecidos para campanhas de marketing entre canais, campanhas por email, publicidade direcionada e muitos outros casos de uso.
+[!DNL Destinations] são integrações pré-construídas com plataformas de destino que permitem a ativação perfeita de dados da Adobe Experience Platform. É possível usar destinos para ativar seus dados conhecidos e desconhecidos para campanhas de marketing entre canais, campanhas de email, publicidade direcionada e muitos outros casos de uso.
 
 **Recursos novos ou atualizados**
 
@@ -60,21 +60,21 @@ Para obter informações mais gerais sobre o Data Science Workspace, consulte o 
 
 {style="table-layout:auto"}
 
-Para obter informações mais gerais sobre destinos, consulte o [visão geral dos destinos](../../destinations/home.md).
+Para obter informações mais gerais sobre destinos, consulte a [visão geral de destinos](../../destinations/home.md).
 
-## Coleta de dados {#data-collection}
+## Coleção de dados {#data-collection}
 
-A Adobe Experience Platform fornece um conjunto de tecnologias que permitem coletar dados de experiência do cliente do lado do cliente e enviá-los à Rede de borda da Adobe Experience Platform, onde eles podem ser enriquecidos, transformados e distribuídos para destinos Adobe ou não Adobe.
+A Adobe Experience Platform fornece um conjunto de tecnologias que permitem coletar dados da experiência do cliente e enviá-los à Rede de borda da Adobe Experience Platform, onde eles podem ser enriquecidos, transformados e distribuídos para destinos da Adobe ou de outras empresas.
 
 **Novos recursos**
 
 | Recurso | Descrição |
 | --- | --- |
-| [Configuração do tipo de acesso para fluxos de dados](../../edge/datastreams/overview.md#create) | Ao criar um novo fluxo de dados, agora é possível selecionar o tipo de solicitações que a Rede de borda deve aceitar: <ul><li>**[!UICONTROL Autenticação mista]**: quando essa opção é selecionada, a Rede de borda aceita solicitações autenticadas e não autenticadas. Selecione esta opção quando planejar usar o SDK da Web ou [SDK móvel](https://aep-sdks.gitbook.io/docs/), juntamente com o [API do servidor](../../server-api/overview.md). </li><li>**[!UICONTROL Somente autenticado]**: quando essa opção é selecionada, a Rede de borda aceita somente solicitações autenticadas. Selecione esta opção quando planejar usar somente a API do servidor e quiser impedir que qualquer solicitação não autenticada seja processada pela [!DNL Edge Network]. </li></ul> |
+| [Configuração do tipo de acesso para fluxos de dados](../../datastreams/overview.md#create) | Ao criar um novo fluxo de dados, agora é possível selecionar o tipo de solicitações que a Rede de borda deve aceitar: <ul><li>**[!UICONTROL Autenticação mista]**: quando essa opção é selecionada, a Rede de borda aceita solicitações autenticadas e não autenticadas. Selecione esta opção quando planejar usar o SDK da Web ou [SDK móvel](https://aep-sdks.gitbook.io/docs/), juntamente com o [API do servidor](../../server-api/overview.md). </li><li>**[!UICONTROL Somente autenticado]**: quando essa opção é selecionada, a Rede de borda aceita somente solicitações autenticadas. Selecione esta opção quando planejar usar somente a API do servidor e quiser impedir que qualquer solicitação não autenticada seja processada pela [!DNL Edge Network]. </li></ul> |
 | [Renderizar apresentações](../../edge/personalization/rendering-personalization-content.md#applypropositions) em aplicativos de página única sem incremento de métricas. | Os novos `applyPropositions` permite renderizar ou executar uma matriz de propostas de [!DNL Target] em aplicativos de página única, sem incrementar o [!DNL Analytics] e [!DNL Target] métricas. Isso aumenta a precisão dos relatórios. |
 | [Compartilhamento de ID de dispositivo móvel para Web e entre domínios](../../edge/identity/id-sharing.md) | O SDK da Web da Adobe Experience Platform agora oferece suporte a recursos de compartilhamento de ID de visitante que permitem fornecer experiências personalizadas com mais precisão, entre aplicativos móveis e conteúdo da Web móvel e entre domínios. |
 | [Extensão de tag da Camada de dados do Google](../../tags/extensions/client/google-data-layer/overview.md) | A extensão Camada de dados da Google permite usar uma camada de dados da Google na implementação de tags. |
-| [Extensão de encaminhamento de eventos de Conversões aprimoradas do Google Ads](https://partners.adobe.com/exchangeprogram/experiencecloud/exchange.details.108630.html) | A extensão Conversões aprimoradas do Google Ads permite aprimorar as conversões do Google Ads em tempo real. |
+| [Extensão de encaminhamento de eventos de Conversões aprimoradas do Google Ads](https://partners.adobe.com/br/exchangeprogram/experiencecloud/exchange.details.108630.html) | A extensão Conversões aprimoradas do Google Ads permite aprimorar as conversões do Google Ads em tempo real. |
 | [Extensão de encaminhamento de eventos do Mailchimp](../../tags/extensions/server/mailchimp/overview.md) | A extensão de encaminhamento de eventos do Mailchimp envia eventos para a API de marketing do Mailchimp que podem acionar emails para campanhas de marketing, jornadas ou transações do Mailchimp. |
 
 Para obter mais informações, consulte [visão geral da coleção de dados](../../collection/home.md).
@@ -119,7 +119,7 @@ O XDM é uma especificação de código aberto que fornece estruturas e definiç
 
 Para obter mais informações sobre o XDM na Platform, consulte a [Visão geral do sistema XDM](../../xdm/home.md).
 
-## Serviço de query {#query-service}
+## Query Service {#query-service}
 
 O Serviço de consulta permite usar o SQL padrão para consultar dados no Adobe Experience Platform [!DNL Data Lake]. Você pode associar qualquer conjunto de dados da [!DNL Data Lake] e capture os resultados da consulta como um novo conjunto de dados para usar em relatórios, no Data Science Workspace ou para assimilação no Perfil do cliente em tempo real.
 
@@ -138,7 +138,7 @@ Para obter mais informações sobre os Serviços de consulta, consulte [Visão g
 
 O Adobe Experience Platform pode assimilar dados de fontes externas e, ao mesmo tempo, estruturar, rotular e aprimorar esses dados usando os serviços da plataforma. Você pode assimilar dados de várias fontes, como aplicativos Adobe, armazenamento baseado em nuvem, software de terceiros e seu sistema de CRM.
 
-O Experience Platform fornece uma API RESTful e uma interface interativa que permite configurar conexões de origem para vários provedores de dados com facilidade. Essas conexões de origem permitem autenticar e conectar a sistemas de armazenamento externos e serviços de CRM, definir tempos para execuções de assimilação e gerenciar a taxa de transferência de assimilação de dados.
+A Experience Platform fornece uma API RESTful e uma interface interativa que permite configurar conexões de origem para vários provedores de dados com facilidade. Essas conexões de origem permitem autenticar e conectar a sistemas de armazenamento externos e serviços de CRM, definir períodos para execuções de assimilação e gerenciar a taxa de transferência de assimilação de dados.
 
 | Recurso | Descrição |
 | --- | --- |
