--- a/help/release-notes/2022/may-2022.md
+++ b/help/release-notes/2022/may-2022.md
@@ -2,7 +2,7 @@
 title: Notas de versão da Adobe Experience Platform de maio de 2022
 description: As notas de versão de maio de 2022 para Adobe Experience Platform.
 exl-id: bcde04aa-7858-437c-a692-2841124006a5
-source-git-commit: 4bdbb987905b6010f4b4f75bee060828d0e07368
+source-git-commit: 3d0f2823dcf63f25c3136230af453118c83cdc7e
 workflow-type: tm+mt
 source-wordcount: '2358'
 ht-degree: 12%
@@ -147,10 +147,10 @@ A Experience Platform fornece um conjunto de tecnologias que permitem coletar da
 
 | Recurso | Descrição |
 | --- | --- |
-| Copiar sequências de dados | [Criar uma cópia de um fluxo de dados existente](../../edge/datastreams/overview.md#copy) e ajustar sua configuração conforme necessário, evitando a necessidade de começar do zero. |
-| Importar regras de mapeamento de sequência de dados | Ao configurar o Preparo de dados para a coleção de dados, é possível [importar as regras de mapeamento de um fluxo de dados existente](../../edge/datastreams/data-prep.md#import-mapping) em vez de configurar cada mapeamento de campo manualmente. |
+| Copiar sequências de dados | [Criar uma cópia de um fluxo de dados existente](../../datastreams/overview.md#copy) e ajustar sua configuração conforme necessário, evitando a necessidade de começar do zero. |
+| Importar regras de mapeamento de sequência de dados | Ao configurar o Preparo de dados para a coleção de dados, é possível [importar as regras de mapeamento de um fluxo de dados existente](../../datastreams/data-prep.md#import-mapping) em vez de configurar cada mapeamento de campo manualmente. |
 | Suporte a mapeamento de datasteam para SDK móvel | Agora é possível configurar o Preparo de dados para a coleção de dados em sequências de dados destinadas ao uso com o SDK móvel do Experience Platform. |
-| Suporte a mapeamento de fluxo de dados para objetos XDM | Mapear objetos XDM além de objetos da camada de dados quando [configuração do Preparo de dados para a coleção de dados](../../edge/datastreams/data-prep.md#select-data). |
+| Suporte a mapeamento de fluxo de dados para objetos XDM | Mapear objetos XDM além de objetos da camada de dados quando [configuração do Preparo de dados para a coleção de dados](../../datastreams/data-prep.md#select-data). |
 | Integração com fluxos de dados | Use o catálogo de fontes na Platform para acessar seus dados na rede de borda da Platform, incluindo o Preparo de dados para coleção de dados e suporte aprimorado para avisos de Preparo de dados. Consulte a [Visão geral da fonte de coleta de dados do Adobe](../../sources/connectors/adobe-applications/data-collection.md) para obter mais informações. |
 
 Para obter mais informações, consulte [visão geral da coleção de dados](../../collection/home.md).
